--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,9 @@
 
-os:
-  - osx
+os: osx
 language: swift
 sudo: required
 dist: trusty
-osx_image: xcode9.2
+osx_image: xcode9
 install:
   - wget https://swift.org/builds/swift-4.2-branch/xcode/swift-4.2-DEVELOPMENT-SNAPSHOT-2018-07-28-a/swift-4.2-DEVELOPMENT-SNAPSHOT-2018-07-28-a-osx.pkg
   - sudo installer -pkg swift-4.2-DEVELOPMENT-SNAPSHOT-2018-07-28-a-osx.pkg -target /
