--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,8 @@ language: generic
 sudo: required
 dist: trusty
 osx_image: xcode9
+env:
+  - TOOLCHAINS=swift
 install:
   - wget https://swift.org/builds/swift-4.2-branch/xcode/swift-4.2-DEVELOPMENT-SNAPSHOT-2018-07-01-a/swift-4.2-DEVELOPMENT-SNAPSHOT-2018-07-01-a-osx.pkg
   - sudo installer -pkg swift-4.2-DEVELOPMENT-SNAPSHOT-2018-07-01-a-osx.pkg -target /
