--- a/.travis.yml
+++ b/.travis.yml
@@ -11,9 +11,4 @@ env:
   - SWIFT_VERSION=5.0
 script:
   - swift package update
-  - swift test
-after_success: 
-  - git clone https://github.com/dn-m/Documentarian && cd Documentarian
-  - swift build -c release -Xswiftc -static-stdlib
-  - cd ../
-  - Documentarian/.build/Release/Documentarian
+  - swift build
