--- a/.travis.yml
+++ b/.travis.yml
@@ -4,11 +4,12 @@ os:
 language: generic
 sudo: required
 dist: trusty
-osx_image: xcode10.2
+osx_image: xcode11
 install:
   - eval "$(curl -sL https://swiftenv.fuller.li/install.sh)"
 env:
   - SWIFT_VERSION=5.0
+  - SWIFT_VERSION=5.0.1
 script:
   - swift package update
   - swift test
